force-app/main/default/objects/Sync_Log_Record__c/Sync_Log_Record__c.object-meta.xml
<CustomObject>
    <label>Sync Log Record</label>
    <nameField>
        <displayFormat>SLR-{0000}</displayFormat>
        <label>Sync Log Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Log Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>