force-app/main/default/objects/Sync_Log_Record__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to Account created/updated as a result of the sync and this Sync Log Record.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sync Log Records</relationshipLabel>
    <relationshipName>Sync_Log_Records</relationshipName>
    <type>Lookup</type>
</CustomField>