force-app/main/default/objects/Sync_Log_Record__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Campaign record created/updated from sync.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Sync Log Records</relationshipLabel>
    <relationshipName>Sync_Log_Records</relationshipName>
    <type>Lookup</type>
</CustomField>