force-app/main/default/objects/Sync_Log_Record__c/fields/Chart_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Chart_of_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to COA record created/updated.</description>
    <label>Chart of Accounts</label>
    <referenceTo>ChartofAccounts__c</referenceTo>
    <relationshipLabel>Sync Log Records</relationshipLabel>
    <relationshipName>Sync_Log_Records</relationshipName>
    <type>Lookup</type>
</CustomField>