force-app/main/default/objects/Sync_Log_Record__c/fields/Commitment__c.field-meta.xml
<CustomField>
    <fullName>Commitment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Commitment record updated/created as part of sync.</description>
    <label>Commitment</label>
    <referenceTo>Commitment__c</referenceTo>
    <relationshipLabel>Sync Log Records</relationshipLabel>
    <relationshipName>Sync_Log_Records</relationshipName>
    <type>Lookup</type>
</CustomField>