force-app/main/default/objects/Sync_Log_Record__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to Contact created/updated as a result of the sync and this Sync Log Record.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sync Log Records</relationshipLabel>
    <relationshipName>Sync_Log_Records</relationshipName>
    <type>Lookup</type>
</CustomField>