force-app/main/default/objects/Sync_Log_Record__c/fields/FSGroupOwnerId__c.field-meta.xml
<CustomField>
    <fullName>FSGroupOwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field for setting OwnerId of new records so they belong to FS Group.</description>
    <label>FSGroupOwnerId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sync_Log_Records</relationshipName>
    <type>Lookup</type>
</CustomField>