force-app/main/default/objects/Sync_Log_Record__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment record created/updated by this Sync Log Record.</description>
    <label>Payment</label>
    <referenceTo>npe01__OppPayment__c</referenceTo>
    <relationshipLabel>Sync Log Records</relationshipLabel>
    <relationshipName>Sync_Log_Records</relationshipName>
    <type>Lookup</type>
</CustomField>