force-app/main/default/objects/Sync_Log_Record__c/fields/RecordInfo__c.field-meta.xml
<CustomField>
    <fullName>RecordInfo__c</fullName>
    <description>Stores json of record from GFW</description>
    <label>Record Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>