force-app/main/default/objects/Sync_Log_Record__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <description>Outcome: error message or id of newly created record.</description>
    <label>Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>