force-app/main/default/objects/Sync_Log_Record__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of sync log record: Pending, Success or Error</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>