force-app/main/default/objects/Sync_Log_Record__c/fields/Sync_Log__c.field-meta.xml
<CustomField>
    <fullName>Sync_Log__c</fullName>
    <description>Parent Sync Log record</description>
    <label>Sync Log</label>
    <referenceTo>Sync_Log__c</referenceTo>
    <relationshipLabel>Sync Log Records</relationshipLabel>
    <relationshipName>Sync_Log_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>