force-app/main/default/objects/Sync_Log_Record__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Set to custom metadata type object mapping name</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>