force-app/main/default/objects/Sync_Log_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RecordInfo__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Results__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>