force-app/main/default/objects/Sync_Log_Record__c/listViews/Errors.listView-meta.xml
<ListView>
    <fullName>Errors</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Results__c</columns>
    <columns>RecordInfo__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>error</value>
    </filters>
    <label>Errors</label>
</ListView>